# app/Http/Resources/Event/EventResource.php
@@ -1,0 +1,26 @@
+<?php
+
+namespace App\Http\Resources\Event;
+
+use App\Http\Resources\Task\TaskResource;
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class EventResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'id' => $this->id,
+            'task_id' => $this->task_id,
+            'task' => new TaskResource($this->task),
+            'type_event' => $this->type_event,
+            'description' => $this->description
+        ];
+    }
+}
